# st_app_schema_gen

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
