[tool.poetry]
name = "app-schema-gen"
version = "0.1.0"
description = "A streamlit app to generate UIs from a json document"
authors = ["Jorge Roa <jorgemarceloroa@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app_schema_gen"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
pydantic = "^2.7.1"
genson = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
